trunk/Archive2/02/4806d44d67fb19/output
main.cpp:4:13: error: 'Data' does not name a type
     virtual Data<T, outputs> getOutput(const Data<T, inputs> &sample) = 0;
             ^
main.cpp:5:34: error: 'Data' does not name a type
     virtual void getOutput(const Data<T, inputs> &sample, Data<T, outputs> *out) = 0;
                                  ^
main.cpp:5:34: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
main.cpp:5:38: error: expected ',' or '...' before '<' token
     virtual void getOutput(const Data<T, inputs> &sample, Data<T, outputs> *out) = 0;
                                      ^
main.cpp:7:28: error: 'map' in namespace 'std' does not name a type
     virtual void set(const std::map<std::string, boost::any> &options) = 0; 
                            ^
main.cpp:7:33: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
     virtual void set(const std::map<std::string, boost::any> &options) = 0; 
                                 ^
main.cpp:7:36: error: expected ',' or '...' before '<' token
     virtual void set(const std::map<std::string, boost::any> &options) = 0; 
                                    ^
main.cpp:15:13: error: 'Data' does not name a type
     virtual Data<T, 1> getOutput(const Data<T, addends> &sample);
             ^
main.cpp:16:34: error: 'Data' does not name a type
     virtual void getOutput(const Data<T, addends> &sample, Data<T, 1> *out);
                                  ^
main.cpp:16:34: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
main.cpp:16:38: error: expected ',' or '...' before '<' token
     virtual void getOutput(const Data<T, addends> &sample, Data<T, 1> *out);
                                      ^
main.cpp:18:28: error: 'map' in namespace 'std' does not name a type
     virtual void set(const std::map<std::string, boost::any> &options);
                            ^
main.cpp:18:33: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
     virtual void set(const std::map<std::string, boost::any> &options);
                                 ^
main.cpp:18:36: error: expected ',' or '...' before '<' token
     virtual void set(const std::map<std::string, boost::any> &options);
                                    ^
